Style fixes. Changed a:visited to grey for better color contrast; link padding

--- a/less/Home.less
+++ b/less/Home.less
@@ -6,3 +6,7 @@ h1 {
 div {
 	font-size: 50px;
 }
+
+#homeDiv a:visited {
+	color: grey;
+}
